--- a/config.toml
+++ b/config.toml
@@ -6,7 +6,7 @@ theme = "m10c"
 [params]
   author = "[DGI]tech"
   description = "Future Tech Author"
-  avatar = "static/avatar.jpg"
+  avatar = "avatar.jpg"
 
   [[params.social]]
     icon = "github"
